feat(产品模块): 添加API日志功能并扩展产品模型
为产品、分类和商家控制器添加API日志注解
在Product模型中添加urgency_level和hotspot_type字段
为模型类添加显式setId方法
更新数据库迁移脚本添加新字段
优化依赖管理排除不必要的依赖